THRIFT-5674: Catch and handle server implementation exceptions Client: js:es6